--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ font-family: 'Kanit', sans-serif
 }
 
 .holy-grail-content {
-   background-image: url("https://images.pexels.com/photos/11816677/pexels-photo-11816677.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+   /* background-image: url("https://images.pexels.com/photos/11816677/pexels-photo-11816677.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); */
     /* background-image: url("pexels-fwstudio-129731.jpg"); */
     /* background-image:url("https://getwallpapers.com/wallpaper/full/c/6/3/489516.jpg") ; */
     /* background-image: url("https://cdn.wallpapersafari.com/82/15/5etG19.jpg"); */
